--- a/Kremenčuk.mw
+++ b/Kremenčuk.mw
@@ -23,12 +23,13 @@ Kremenčuk jagase kahteks administrativižeks rajonaks: Avtotegimen (ukr. ''Ав
 Kaikiš suremb eläjiden lugu oli 248 tuh. ristituid vl 1995. Läz 450 tuhad eläjid om ezilidnoidenke.
 
 == Ižanduz ==
-Kremenčukan ižandusen päsarakod oma avtosauvomine (AvtoKrAZ, avtoühthekeradai tegim, tesauvondan mašinoiden tegim, «Kremen'»-avtoližavedamoiden edheotand, kezroiden tegim), raudtekaluišton pästand (vagontegim i raudbetonšpaloiden tegim), kivivoinümbriradmine, metallurgii (terasen valamižtegim), sömtegimišt (koume leibäntegint, lihakombinat, maidtegim, nell' konditerišt fabrikad, likörvintegim i tabakfabrik), kebn tegimišt (nahkankombinat i kaks' omblendfabrikad).
+Kremenčukan ižandusen päsarakod oma avtosauvomine ([[jüguavto]]iden AvtoKrAZ-kompanii, avtoühthekeradai tegim, tesauvondan mašinoiden tegim, «Kremen'»-avtoližavedamoiden edheotand, kezroiden tegim), raudtekaluišton pästand (vagontegim i raudbetonšpaloiden tegim), kivivoinümbriradmine, metallurgii (terasen valamižtegim), sömtegimišt (koume leibäntegint, lihakombinat, maidtegim, nell' konditerišt fabrikad, likörvintegim i tabakfabrik), kebn tegimišt (nahkankombinat i kaks' omblendfabrikad).
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
 Kremenchugskij rajon.PNG|Kremenčukan röun da ezilidnad
-Кременчуцька міська рада 1.JPG|Lidnan parlament
+Кременчуцька міська рада 1.JPG|Lidnan parlament (2012)
+Залізничний вокзал (Кременчук) 01.jpg|Kremenčuk-päraudtestancijan nägu vl 2011
 </gallery>
 
 == Irdkosketused ==
