--- a/Kremenčuk.mw
+++ b/Kremenčuk.mw
@@ -29,6 +29,7 @@ Kremenčukan ižandusen päsarakod oma avtosauvomine ([[jüguavto]]iden AvtoKrAZ
 <gallery mode="packed" heights="125px">
 Kremenchugskij rajon.PNG|Kremenčukan röun da ezilidnad
 Кременчуцька міська рада 1.JPG|Lidnan parlament (2012)
+Колишній католицький костел Свято-Миколаївська церква ПЦУ.jpg|Ph. Mikulai-čudonsädajan päjumalanpert', vn 2020 nägu (ortodoksine hristanuskond, edel 1919. vot katoline bazilikpäjumalanpert')
 Залізничний вокзал (Кременчук) 01.jpg|Kremenčuk-päraudtestancijan nägu vl 2011
 </gallery>
 
