--- a/Kremenčuk.mw
+++ b/Kremenčuk.mw
@@ -7,9 +7,9 @@
  | Valdkund = Ukrain
  | Eläjiden lugu = 221,647
  | Voz' = 2017
- | Pind = 92
+ | Pind = 96
  | Fail = Collage of Kremenchuk.jpg
- | Pämez' =
+ | Pämez' = Vitalii Maleckii<br />(kül'mku 2015—,<br />''Віталій Малецький'')
  | Telefonkod = +380-536 (6)
  | Aigvö = tal'vel [[UTC]]+2,<br />kezal [[UTC]]+3
 }}
