--- a/Näzepetrovsk.mw
+++ b/Näzepetrovsk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Näzepetrovskan lidnanznam
  | Flag text = Näzepetrovskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 11,752
- | Voz' = 2017
+ | Eläjiden lugu = 11,425
+ | Voz' = 2020
  | Pind = 27
  | Fail = Город Нязепетровск (вид на город) 03.jpeg
- | Pämez' = Aleksandr Korostelev<br />(2008—)
+ | Pämez' = Gennadii Lukojanov<br />(reduku 2020—)
  | Telefonkod = +7-35156-xx-xxx
  | Avtokod = 74. 174
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -26,14 +26,27 @@ Lidn sijadase rajonan keskuzpalan pohjoižes, Näz'-jogen ({{lang-ba|Наҙы}} 
 
 «Üläufalei — [[Mihailovsk (Sverdlovskan agj)|Mihailovsk]]»-avtotekeskust läbitab lidnan pohjošt. «[[Alasergid]] — [[Zlatoust]]»-raudtekeskust om lidnan suviröunaks. Näzepetrovskai-raudtestancii ({{lang-ru|Нязепетровская}}) om olmas vspäi 1915, se radab vaiše jüguiden täht vn 2012 sügüz'kuspäi.
 
-Koume žilod mülüdas lidnankundha Näzepetrovskan ližaks, niiden ühthine ristitišt oli 33 eläjad vl 2010.
+Koume žilod mülüdas lidnankundha Näzepetrovskan ližaks, niiden ühthine ristitišt oli 33 eläjad vl 2010. Lidnankundan pind — 1122,43 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 12 451 ristitud, lidnankundan — 12 484 ristitud. Kaikiš suremb lidnan ristitišt oli läz 22 tuhad eläjid vll 1959−1967 (22 497 rist. vl 1959). Kaik 11 785 ristitud elihe lidnankundas vl 2017.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 12 451 ristitud, lidnankundan — 12 484 ristitud, rajonan viž seičemendest. Kaikiš suremb lidnan ristitišt oli läz 22 tuhad eläjid vll 1959−1967 (22 497 rist. vl 1959). Kaik 11 752 ristitud elihe lidnas i 11 785 ristitud kaikes lidnankundas vl 2017.
 
 Rahvahad (2010): [[venälaižed]] — 85,2%, [[totarlaižed]] — 7,1%, [[baškiralaižed]] — 6,2%, toižed rahvahad — 1,5%.
 
-Professionaližen opendusen aluzkund om Kaslin tegimištoliž-gumanitarižen tehnikuman Näzepetrovskan filial.<ref>[http://pu27.ucoz.net/ Kaslin tegimištoliž-gumanitarižen tehnikuman Näzepetrovskan filialan sait (''pu27.ucoz.net'').] {{ref-ru}}</ref>
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] phh. Pedroin da Pauloin jumalanpert'<ref>[http://sobory.ru/geo/locat/9566 Näzepetrovskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om kaičenus lidnas, pühäpert' om saudud vll 1853−1866.
+
+Kaslin tegimištoliž-gumanitarižen tehnikuman Näzepetrovskan filial<ref>[http://pu27.ucoz.net/ Kaslin tegimištoliž-gumanitarižen tehnikuman Näzepetrovskan filialan sait (''pu27.ucoz.net'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+Edeline lidnankundan pämez' om Aleksandr Korostelev (2008 — reduku 2020).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Город Нязепетровск. ЦРБ.jpeg|Näzepetrovskan rajonan läžundkodi lidnan uiton randal (2013)
+Нязепетровск, Храм Святых Апостолов Петра и Павла.jpg|Phh. Pedroin da Pauloin jumalanpert', vn 2014 nägu
+Фотография Литейно-механического завода на 2014 год.jpg|Valamižmehanine tegim Näz'-jogen randal vl 2014
+Железнодорожная станция Нязепетровская 02.jpg|Näzepetrovskai-raudtestancijan depo vl 2000
+Железнодорожная станция Нязепетровская 04.jpg|Näzepetrovskai-stancijan vagzal vl 2014
+</gallery>
 
 == Homaičendad ==
 <references />
