--- a/Min'jar.mw
+++ b/Min'jar.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Min'jaran lidnanznam
  | Flag text = Min'jaran flag
  | Valdkund = Venäma
- | Eläjiden lugu = 9,342
- | Voz' = 2017
+ | Eläjiden lugu = 8,870
+ | Voz' = 2020
  | Pind = 12
  | Fail = Г. Миньяр .jpg
  | Pämez' = Güzel' Sibagatulina<br />(keväz'ku 2017—)
@@ -19,21 +19,31 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1771 kuti žilo sauvomha da holitamha Min'jaran raudantegint. Se radaškanzi vl 1784, nimitihe jogen mödhe. Vl 1901 raudtegim pästi lehtezraudad päpaloin, jarmank radoi. Radnikžilo sai lidnan statusad vn 1943 14. päiväl semendkud.
 
-Min'jar šingotase [[šebin'|šebnän]] samižel i šebnäntegimel, vanundtermižel tegimel (teraraudlent)<ref>[http://mptz.ru/ Min'jaran vanundtermižen tegimen sait (''mptz.ru'').] {{ref-ru}}</ref>, mägisuksiden keskusel.
+Min'jar šingotase [[šebin'|šebnän]] samižel i šebnäntegimel, vanundtermižel tegimel (teraraudlent)<ref>[http://mptz.ru/ Min'jaran vanundtermižen tegimen sait (''mptz.ru'').] {{ref-ru}}</ref>, mägisuksiden keskusel (koume libutint).
 
 == Geografijan andmused ==
 Lidn sijadase rajonan keskuzpalas, [[Uralmäged|Suviuralan]] päivlaskmaižil pautkil, Sim-jogen alangištos ({{lang-ba|Эҫем}} 239 km pitte, [[Kam (jogi)|Kaman]] hurapol'ne bassein). Min'jar vedase pidust' jogen molembid randoid läz 7 km, seižub 165 m ü.m.t. keskmäižel korktusel. Min'jar-jogi (42 km pitte) lankteb Simha oiktalpäi Min'jaran uitos-vezivaradimes, se om saudud lidnan pohjoižpäivnouzmas. Matkad [[Čeläbinsk]]hasai om 350 km päivnouzmha avtotedme vai 357 km raudtedme, [[Uf]]-lidnhasai — 125 km päivlaskmha-suvipäivlaskmha avtotedme. Lähembaižed lidnad oma [[Aš (lidn)|Aš]]-rajonkeskuz 19 km suvipäivlaskmha orhal, 23 km avtotel vai raudtel, i [[Sim (lidn, Čeläbinskan agj)|Sim-lidn]] 13 km suvipäivnouzmha orhal vai 24 km avtotedme.
 
-«Čeläbinsk — [[Uf]]»-avtote (M5-trass) mäneb 8 km suvhe lidnaspäi. Min'jar-stancii radab «Čeläbinsk — Uf»-raudtel vspäi 1890.
+«Čeläbinsk — [[Uf]]»-avtote (M5-trass) mäneb kahesa kilometrad suvhe lidnaspäi. Min'jar-stancii radab «Čeläbinsk — Uf»-raudtel vspäi 1890.
 
 Volkovo-žilo (111 rist. vl 2017) mülüb lidnankundha Min'jaran ližaks. Lidnankundan pind — 420,7 km².
 
 == Eläjad ==
-Vl 1939 radnikžilon ristitišt oli 9 800 eläjad. Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 10 194 ristitud, lidnankundan — 10 324 ristitud, rajonan kudendez. Kaikiš suremb lidnan ristitišt oli 15..16 tuhad eläjid vll 1959−1967 (16 tuh. rist. vl 1967). Kaik 9 453 ristitud elihe lidnankundas vl 2017.
+Vl 1939 radnikžilon ristitišt oli 9 800 eläjad. Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 10 194 ristitud, lidnankundan — 10 324 ristitud, rajonan kudendez. Kaikiš suremb lidnan ristitišt oli 15..16 tuhad eläjid vll 1959−1967 (16 tuh. rist. vl 1967). Kaik 9 342 ristitud elihe lidnas i 9 453 ristitud kaikes lidnankundas vl 2017.
 
 Rahvahad (2010): [[venälaižed]] — 73,1%, [[totarlaižed]] — 13,7%, [[baškiralaižed]] — 9,5%, [[čuvašalaižed]] — 1,1%, toižed rahvahad — 2,3%.
 
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Tulendan Pühäpert'he jumalanpert'<ref>[http://sobory.ru/geo/locat/5201 Min'jaran pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om kaičenus lidnas, pühäpert' om saudud vll 1795−1819. [[Islam]]an mahallä-mečet' nomer 363 om avaitud lidnas.
+
 Professionaližen opendusen aluzkund om Ašan industrialižen tehnikuman Min'jaran filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Minyar Church.JPG|Jumalanmaman Tulendan Pühäpert'he jumalanpert', vn 2011 nägu
+Вид на Миньярский пруд со скал.JPG|Lidnan kall'od i uit vn 2012 heinkus
+Г. Миньяр Ашинский район.jpg|Avtotesildad lidnan uitos päliči vl 2017
+Minjiar.jpg|Mürk Krasnai-kall' i raudte lidnan röunal
+</gallery>
 
 == Homaičendad ==
 <references />
