--- a/Vepsänma.mw
+++ b/Vepsänma.mw
@@ -3,7 +3,7 @@
 
 Rahvahan istorine tahond om kaičenus tähäsai. Sijadase neniš regionoiš: [[Karjalan Tazovaldkund]]an suvi, [[Leningradan agj|Leningradan agjan]] päivnouzm da [[Vologdan agj|Vologdan]] agjan päivlaskm. Ühthine vepsän administrativine ühtnik ei olend sätud tähäsai, Vepsän nacionaline ümbrik jäi 1930-nziden voziden planoiš vaiše.
 
-Territorii om järvekaz, harakterizuiše äjil soil i mecoil, transportteiden vajagudel, ristitišton penel lugumäral. [[Vepsän ülüz]] om londuseližeks vezijagandröunaks Baltijan i Kaspijan meriden basseinoiden keskes. Znamasižed järved oma [[Änine]] i [[Vaugedjärv]] (Valgjärv), joged oma [[Ojat' (jogi)|Ojat']] i [[Süvär']].
+Territorii om järvekaz, harakterizuiše äjil soil i mecoil, transportteiden vajagudel, ristitišton penel lugumäral. [[Vepsän ülüz]] om londuseližeks vezijagandröunaks Baltijan i Kaspijan meriden basseinoiden keskes. Znamasižed järved oma [[Änine]], [[Ladog]]<ref>Строгальщикова З.И. ''О ранних этапах этнической истории вепсов'' (Vepsläižiden etnižen istorijan aigaližiš etapoiš). // Вепсский край: история и её творцы (Vepsänma: istorii i sen sädajad). Petroskoi: Verso, 2021. — 192 lp. — Lpp. 84−114. {{ref-ru}}, [http://illhportal.krc.karelia.ru/publ.php?id=20897&plang=r kirjan pdf-versii ''illhportal.krc.karelia.ru''-saital.]</ref> i [[Vaugedjärv]] (Valgjärv), joged oma [[Ojat' (jogi)|Ojat']] i [[Süvär']].
 
 Istorižes agjas eläb koumen paginan vepsläižid. Paginoiden territorijad levitasoiš penel keskustal toine toižespäi, om mecoid i eländpunktoid venälaižiden enambusenke niiden keskes. Vspäi 1928 suvivepsläižiden pala sirdi Sibirihe (Kemerovon, Irkutskan agjad) päzutamhas kollektivizacijaspäi. Om vepsläižiden joukuid enččedme [[Nevondkundaline Ühtištuz|NSTÜ:dme]], [[Ukrain]] om toine valdkund vepsläižiden oficialižen lugun mödhe.
 
