/* Rahoiže sidodud vepsän muštatišed */ +

--- a/Rahad.mw
+++ b/Rahad.mw
@@ -27,6 +27,7 @@ Nügüd'aigan elektronižed rahad vajehtadas personaližid. Maksmižen tetpaiže
 * ''Den'goil katust ed kata, katad den'goihe.''
 * ''Ei sa rahoid sandal sada, a pidab pidandal pidada.''
 * ''Korman ei käske.'' (rahoid ei ole)
+* ''Pakičijan jäl'ghe ei mängoi.''
 * ''Rahad da leib vellesed oma.''
 * ''Rahad ei olgoi sened, tal'vel-ki kazdas.''
 </blockquote>
