/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -21,6 +21,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
 * ''Andad käzil, a otad jaugoil.'' (tulese kävuda pördamha velgad)
+* ''Bohatale iknaspäi-ki tuleb, a golläl ka uksespäi-ki lähteb.''
 * ''Eci, kut leibäd ecid, siloi löudad.''
 * ''Edemba hutid, lähemba otad.''
 * ''Ei elokaz om, kudamb elon sab, a elokaz om, kudamb varjoičeb.''
