/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -38,6 +38,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Kel ohjased kädes, se i ohjandab.''
 * ''Kenel om äi, ka tarbiž völ enamb.''
 * ''Kenen tavar, ka se i arvon paneb.''
+* ''Kodi — kor'bes, pert' — pedajas, luzikad — luhtas.'' (kenel ei ole nimidä)
 * ''Kolijalpäi velgad ed ota.''
 * ''Korman ei käske.'' (rahoid ei ole)
 * ''Kut sä minei, muga i mä sinei.''
