/* Eländkodihe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Eländkodi.mw
+++ b/Eländkodi.mw
@@ -185,6 +185,7 @@ Vogelhaus Modell Eduard 4.JPG|Lindpertiine todesižen küläkodin kartte
 * ''Hüvä emäg tühjalaz pert'he ei tule.''
 * ''Iknan kohtas paremba vauktut nägub.''
 * ''Kenen koir om, ka sen pertin-ki varjoičeb.''
+* ''Kodi — kor'bes, pert' — pedajas, luzikad — luhtas.'' (kenel ei ole nimidä)
 * ''Meiden pertid sänke ei ridelkoi.''
 * ''Melev om pertine, a avadimen kadoti.'' (äi mel't)
 * ''Pert' tehmata ei tule.''
