/* Pedajha sidodud vepsän muštatišed da ozoitesed */ +

--- a/Pedai.mw
+++ b/Pedai.mw
@@ -38,8 +38,9 @@ Ottas kävutamižhe [[pu (material)|pumaterialaks]] levedali: kogonaižed parded
 * ''Somändik'' — so pedajidenke.
 
 == Pedajha sidodud vepsän muštatišed da ozoitesed ==
-=== Muštatiž ===
+=== Muštatišed ===
 <blockquote>
+* ''Kodi — kor'bes, pert' — pedajas, luzikad — luhtas.'' (kenel ei ole nimidä)
 * ''Pedai pit'k om, a oksad lühüdad.'' (ei kaik ole kebn)
 </blockquote>
 === Ozoitez ===
