/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -34,6 +34,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Hoikas jokseb — da sanktas lähteb.'' (rezul'tat ei sättu tegendoile)
 * ''Hüvä da veraz, paha da ičeiž.''
 * ''Kaht jänišad küksendeled, ni üht ed tabada.''
+* ''Kaikutte ičeze gomn'ale tapab.'' (ecib ičeze ližad)
 * ''Kebnas tuli, kebnas läksi.''
 * ''Kel ohjased kädes, se i ohjandab.''
 * ''Kenel om äi, ka tarbiž völ enamb.''
@@ -41,6 +42,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Kodi — kor'bes, pert' — pedajas, luzikad — luhtas.'' (kenel ei ole nimidä)
 * ''Kolijalpäi velgad ed ota.''
 * ''Korman ei käske.'' (rahoid ei ole)
+* ''Kut radoid, mugoine i pauk.''
 * ''Kut sä minei, muga i mä sinei.''
 * ''Kuti padaha paik pandud.'' (om tehtud satusetomašti)
 * ''Kuverz' taht rada, hüvähä ei mäne.''
