--- a/Mez'.mw
+++ b/Mez'.mw
@@ -46,6 +46,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Necil mehel kündlid ed osta.''
 * ''Oled mez' ka ole, a ed ole ka kole.''
 * ''Pästa erast mest kündusele, ka hän jumalčogaha-ki ličese.''
+* ''Radospäi meheks nimitadas, ei suriš sanoišpäi.''
 * ''Sanal voib mez' rikta.''
 * ''Sanaspäi — mez', sarvespäi — härg.''
 * ''Sil'mäd — ku luzikad, a ei näge mužikad.''
