/* Sobihe sidodud vepsän muštatišed i ozoitesed */ +

--- a/Sobad.mw
+++ b/Sobad.mw
@@ -93,6 +93,7 @@ Uniform om märitud büdžetorganizacijoiden radnikoiden da valdkundmehiden täh
 <blockquote>
 * ''Mez' ei voi olda sobita.''
 * ''Miččed oma kadjad, ka mugoi räcin-ki.'' (mitte mužik, mugoine ak-ki)
+* ''Miččed radod, mugomad sobad-ki.''
 * ''Pen't reigud ed kohenda, sur' linneb — ka tacid.'' (pidab tehta aigaižel, ičeze aigal)
 * ''Sömäta joksed läbi pöudos, a alasti ei sa.''
 </blockquote>
