([[c:GR|GR]])  [[File:Coat of Arms of Kemsky rayon (Karelia).jpg]] → [[File:Coat of Arms of Kemsky District.svg]] JPG→SVG

--- a/Kemin_rajon.mw
+++ b/Kemin_rajon.mw
@@ -1,6 +1,6 @@
 {{Rajon
 | Nimi          = Kemin rajon<br />Кемский район <small>(ven.)</small><br />Kemin piiri <small>(karj. i suom.)</small>
-| Znam          = Coat of Arms of Kemsky rayon (Karelia).jpg
+| Znam          = Coat of Arms of Kemsky District.svg
 | Flag          = Flag of Kemsky rayon (Karelia).png
 | Znam text     = Kemin rajonan znam
 | Flag text     = Kemin rajonan flag
