Replacing Liazik.JPG with [[File:Moscow_museum_bus_5621_2009-09_LiAZ-677M.jpg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR3|Criterion 3]] (obvious error)).

--- a/LiAZ-677.mw
+++ b/LiAZ-677.mw
@@ -1,4 +1,4 @@
-[[Fail:Liazik.JPG|thumb|right|250px|LiAZ-677M]]
+[[Fail:Moscow museum bus 5621 2009-09 LiAZ-677M.jpg|thumb|right|250px|LiAZ-677M]]
 '''LiAZ-677''' ({{lang-ru|ЛиАЗ-677}}) om [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|nevondkundaline]] massine lidnalaine korgedlavaine avtobus. Se oli ezmäine NSTÜ:n avtobus ajaimiden gidromehaniženke (avtomatiženke) konorüdenke.
 
 Projektiruihe vl 1963. Pästtihe vspäi 1967 vhesai 1994 [[Likinon avtotegim]]el (Moskvan agj), sid' üksin vhesai 2002. Kaik om tehtud 194 183 egzemplärad. Model' om vajehtadud ekspluatacijas avtobusoiden toižil modelil 2000-nzil vozil päpaloin.
