([[c:GR|GR]])  [[File:Flag of Loukhsky rayon.png]] → [[File:Flag of Loukhsky District.svg]] PNG→SVG

--- a/Louhin_rajon.mw
+++ b/Louhin_rajon.mw
@@ -1,7 +1,7 @@
 {{Rajon
 | Nimi          = Louhin rajon<br />Лоухский район <small>(ven.)</small><br />Louhen piiri <small>(suom.)</small>
 | Znam          = Loukhskiy rayon COA (2013).jpg
-| Flag          = Flag of Loukhsky rayon.png
+| Flag          = Flag of Loukhsky District.svg
 | Znam text     = Louhin rajonan znam
 | Flag text     = Louhin rajonan flag
 | Valdkund      = Venäma
