--- a/Zavorotnük_Anastasija.mw
+++ b/Zavorotnük_Anastasija.mw
@@ -2,7 +2,14 @@
 | изображение = Заворотнюк Анастасия.jpg
 | описание изображения = Anastasija Zavorotnük vn 2013 semendkus
 }}
-'''Anastasija Jur'jevna Zavorotnük''' ({{lang-ru|Анастасия Юрьевна Заворотнюк}}; sünd. [[3. sulaku]] [[1971]], [[Astrahan']], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Venäma|venämalaine]] kinon i teatran aktris da TV-vedai.
+'''Anastasija Jur'jevna Zavorotnük''' ({{lang-ru|Анастасия Юрьевна Заворотнюк}}; sünd. [[3. sulaku]] [[1971]], [[Astrahan']], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Venäma|venämalaine]] kinon i teatran aktris da TV-vedai. Venälaižen Federacijan arvostadud artist (2006).
+
+== Biografii ==
+Tuleban aigan aktris om sündnu Jurii Zavorotnük-telerežissöran (1945−2014) i sen Valentina-akan (Venäman rahvahan artist) kanzha. Lapsessai Anastasija päti väta rolid teatras, oti muzikan i karguiden urokoid joudas, om pästnus Astrahanin lapsiden muzikškolaspäi nomer 1.
+
+Vll 1988−1989 naine zavodi opendust Astrahanin valdkundaližen pedagogižen institutan istorižes fakul'tetas, no jäti kesketi i tuli samha opendust MHAT:an školha-studijha (Moskv, Avangard Leontjevan kurs), om sen vn 1993 pästnikan.
+
+Anastasija radoi aktrisan teatras-studijas [[Oleg Tabakov]]an ohjandusel, kümnes vodes edesti 29 spektaklin rolid. Vspäi 1991 vändi rolid fil'miš epizodižikš, vll 2004−2018 fil'mzihe kaikenaigašti. Sil-žo aigal aktris radoi televizijas, läz 20 teleoigendusen vedai.
 
 == Homaičendad ==
 <references/>
