--- a/.fj.mw
+++ b/.fj.mw
@@ -1,4 +1,19 @@
-'''.fj''' om [[Fidži]]n [[DNS|Internet-domen]]. Se om avaitud [[1992. voz'|1992]]-nden voden 3. päiväl kezakud.<ref>[http://iana.org/domains/root/db/fj.html IANA — .fj Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.fj''' om [[Fidži]]n [[DNS|Internet-domen]]. Se om avaitud [[1992. voz'|1992]]-nden voden 3. päiväl kezakud<ref>[http://iana.org/domains/root/db/fj.html IANA — .fj Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Domen om sätud Fidžihe sidodud organizacijoiden i personoiden täht.
+
+Registracii om lasktud koumandel tazopindal vaiše, kahtenden tazopindan märitud domenoil. Röunadusid ei ole tobjimalaz. Maksmine registracijas om 100$ i 50$ tehnižen pid'oitelendan vodes verazmalaižiden täht, voib maksta kümnes vodes kerdalaz. Rezidentad makstas niid-žo luguid, vaiše [[fidžin dollar]]oiš.
+
+Kahtenden tazopindan valitud reglamentiruidud domenad:
+* '''.ac.fj''' — opendusen aluzkundad päiči školoiš
+* '''.biz.fj''' — edheotandad (röunadusita)
+* '''.com.fj''' — kommertižed kompanijad (röunadusita)
+* '''.gov.fj''' — Fidžin valdkundaližed organad
+* '''.info.fj''' — informacižed saitad (röunadusita)
+* '''.mil.fj''' — Fidžin Tazovaldkundan sodaaluzkundad
+* '''.name.fj''' — personoiden täht (röunadusita)
+* '''.net.fj''' — verkoiden provaiderad da operatorad (röunadusita)
+* '''.org.fj''' — organizacijad, kommertižetomad päpaloin (röunadusita)
+* '''.pro.fj''' — sertificiruidud professionaloiden täht (ei ole röunadusid)
+* '''.school.fj''' — Fidžin ala- i keskškolad vaiše.
 
 == Homaičendad ==
 <references />
