*Empty MediaWiki Message*

--- a/.ir.mw
+++ b/.ir.mw
@@ -17,7 +17,7 @@ Kahtenden tazopindan reglamentiruidud domenad:
 == Irdkosketused ==
 * [http://www.nic.ir/ Domenan sait — IRNIC (''nic.ir'').] {{ref-fa}} {{ref-en}}, ohjandai om ''Tedoidusiden institut fundamentaližiš tedoiš'', [[Tehran]]
 * [http://iana.org/domains/root/db/ir.html IANA-informacii (''iana.org'').] {{ref-en}}
-{{Commons|Category.ir}}
+{{Commons|Category:.ir}}
 
 {{CcTLD}}
 
