--- a/.ir.mw
+++ b/.ir.mw
@@ -1,13 +1,13 @@
 '''.ir''' om [[Iran]]an [[DNS|Internet-domen]]. Se om avaitud [[1994. voz'|1994]]-nden voden 6. päiväl sulakud<ref>[http://iana.org/domains/root/db/ir.html IANA — .ir Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Domenan DNS-serveroiden sijaduz verhiš maiš om kel'tud.
 
-Registracii om lasktud kahtendel i koumandel tazopindal. Sab sada domennimed valdkundan rezidentoile vaiše.
+Registracii om lasktud kahtendel i koumandel tazopindoil. Sab sada domennimed valdkundan rezidentoile vaiše.
 
 Kahtenden tazopindan reglamentiruidud domenad:
 * '''.ac.ir''' — akademižen tedon aluzkundad
 * '''.co.ir''' — edheotandad, kommertižed kompanijad
 * '''.gov.ir''' — Iranan valdkundaližed organad
 * '''.id.ir''' — personoiden domennimed
-* '''.net.ir''' — для интернет-провайдеров и сетевых компаний, hüvästadud IRTCT:al Internet-provaiderad i verkoiden kompanijad
+* '''.net.ir''' — hüvästadud IRTCT:al Internet-provaiderad i verkoiden kompanijad
 * '''.org.ir''' — kommertižetomad organizacijad
 * '''.sch.ir''' — ala- i keskškolad.
 
