--- a/.ir.mw
+++ b/.ir.mw
@@ -1,12 +1,12 @@
-'''.ir''' om [[Iran]]an [[DNS|Internet-domen]]. Se om avaitud [[1994. voz'|1994]]-nden voden 6. päiväl sulakud<ref>[http://iana.org/domains/root/db/ir.html IANA — .ir Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Domenan DNS-serveroiden sijaduz verhiš maiš om kel'tud.
+'''.ir''' om [[Iran]]an [[DNS|Internet-domen]]. Se om avaitud [[1994. voz'|1994]]-nden voden 6. päiväl sulakud<ref>[http://iana.org/domains/root/db/ir.html IANA — .ir Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Sen komplimentarine domen om '''.ایران''' (.iran) domennimiden täht [[persijan kel'|persijan kelel]], registracii oli avaitud vl 2010 i sid'-žo loptüd sankcijoiden tagut (1600 domennimed om sätud). Kaik läz pol'tošt millionad domennimid om registriruidud .ir-zonas vodele 2021.
 
-Registracii om lasktud kahtendel i koumandel tazopindoil. Sab sada domennimed valdkundan rezidentoile vaiše.
+Registracii om lasktud kahtendel i koumandel tazopindoil. Sab sada domennimed valdkundan rezidentoile vaiše faktižikš. Domenan DNS-serveroiden sijaduz verhiš maiš om kel'tud.
 
 Kahtenden tazopindan reglamentiruidud domenad:
-* '''.ac.ir''' — akademižen tedon aluzkundad
+* '''.ac.ir''' — akademižen tedon aluzkundad i openduzsebrad
 * '''.co.ir''' — edheotandad, kommertižed kompanijad
 * '''.gov.ir''' — Iranan valdkundaližed organad
-* '''.id.ir''' — personoiden domennimed
+* '''.id.ir''' — personoiden domennimed (personaline identifikacine nomer om tarbhaine)
 * '''.net.ir''' — hüvästadud IRTCT:al Internet-provaiderad i verkoiden kompanijad
 * '''.org.ir''' — kommertižetomad organizacijad
 * '''.sch.ir''' — ala- i keskškolad.
