--- a/Lantanoidad.mw
+++ b/Lantanoidad.mw
@@ -1,9 +1,12 @@
 {{10000}}{{A10000}}
+[[Fail:Lanthanoide.jpg|thumb|right|300px|Lantanoidoiden ozutesed puhthikš substancijoikš]]
 '''Lantanoidad''' om 15 himižiden elementoiden ([[metall]]oiden) heim, 57..71 nomeridenke, [[lantan]]aspäi [[lütecii|lütecijhesai]]. Ühthine znam om '''Ln'''.
 
-Kaik nened elementad sijadasoiš [[Himižiden elementoiden periodine tablut|himižiden elementoiden periodižen tabluden]] III gruppas, VI periodas.
+Kaik nened elementad sijadasoiš [[himižiden elementoiden periodine tablut|himižiden elementoiden periodižen tabluden]] III gruppas, kudendes periodas.
 
-Kaik lantanoidad oma lujas harvad londuses. Kaikiden elementoiden stabiližed izotopad oma olmas päiči [[prometii|prometijas]]. Niiden kävutamine om erazvuitte; kaikuččel lantanoidal om ičendoid, kudambad pandas märha sen kävutamižen pöudod.
+Kaik lantanoidad oma harvad londuses lujas. Kaikiden elementoiden stabiližed izotopad oma olmas päiči [[prometii|prometijas]]. Niiden kävutamine om erazvuitte; kaikuččel lantanoidal om ičendoid, kudambad pandas märha sen kävutamižen pöudod.
+
+Elementoiden heimon nimituz libub [[amuižgrekan kel'|amuižgrekan kelen]] λανθάνειν-sanaspäi (''lantanein'' «peitol'ne»).
 
 == Homaičendad ==
 <references />
