--- a/Lantanoidad.mw
+++ b/Lantanoidad.mw
@@ -6,7 +6,7 @@ Kaik nened elementad sijadasoiš [[himižiden elementoiden periodine tablut|himi
 
 Kaik lantanoidad oma harvad londuses lujas. Kaikiden elementoiden stabiližed izotopad oma olmas päiči [[prometii|prometijas]]. Niiden kävutamine om erazvuitte; kaikuččel lantanoidal om ičendoid, kudambad pandas märha sen kävutamižen pöudod.
 
-Elementoiden heimon nimituz libub [[amuižgrekan kel'|amuižgrekan kelen]] λανθάνειν-sanaspäi (''lantanein'' «peitol'ne»).
+Elementoiden heimon nimituz libub [[amuižgrekan kel'|amuižgrekan kelen]] λανθάνειν-sanaspäi (''lantanein'' «venuda peitol'žen»). Norvegine [[Viktor Gol'dšmidt]]-geohimik mainiti nimitust ezmäižen kerdan ičeze vn 1925 tedotös, hän-žo andoi nimitust [[aktinoidad]]-gruppale vl 1937.
 
 == Homaičendad ==
 <references />
