--- a/Ekvador.mw
+++ b/Ekvador.mw
@@ -11,10 +11,10 @@
 | Pind = 283,560
 | Kart = Ecuador in its region.svg
 | Kel' = [[ispanijan kel'|ispanijan]], [[kečuan kel'|kečuan]], [[šuaran kel'|šuaran]]
-| Valdkundan pämez' = [[Moreno Lenin|Lenin Moreno]]
+| Valdkundan pämez' = [[Lasso Giljermo|Giljermo Lasso]]
 | Päministr = ''hän-žo''
 | Religii = [[hristanuskond]]
-| Valüt = [[AÜV:oiden dollar]] ($) (USD)<ref>Mugažo ekvadoran monetad (ičeze henod rahad). Edel 2000 vot — [[ekvadoran sukre]].</ref>
+| Valüt = [[AÜV:oiden dollar]] ($) (USD)<ref>Mugažo ekvadoran monetad (ičeze henod rahad). Edel 2000. vot — [[ekvadoran sukre]].</ref>
 | Internet-domen = [[.ec]]
 | Telefonkod = +593
 | Aigvö = [[UTC]]−5<ref>Mugažo [[UTC]]−6 [[Galapagosan sared|Galapagosan saril]].</ref>
@@ -35,7 +35,7 @@ Vn 1822 24. päiväl semendkud Ekvador tedištoiti ripmatomudes [[Ispanii|Ispani
 Valdkundan ezmäine Konstitucii oli vahvištadud vl 1830. Nügüdläine 27nz' lugul Ekvadoran Konstitucii<ref>[http://es.wikisource.org/wiki/Constituci%C3%B3n_de_Ecuador_de_2008 Vn 2008 Ekvadoran Konstitucijan tekst Vikiaitas.] {{ref-es}}</ref><ref>[http://www.constituteproject.org/ontology/Ecuador?lang=en Ekvadoran Konstitucijan tekst ''constituteproject.org''-saital.] {{ref-en}}</ref> om väges vspäi 2008, se jagoi tobmuden sarakoid lopuks, kaik ned oma valičendoiden al nügüd'. Toihe kohendusid Konstitucijha vll 2011, 2015 i 2018.
 
 == Geografijan andmused ==
-[[Fail:Ecuador Topography.png|thumb|left|250px|Ekvadoran topografine kart.]]
+[[Fail:Ecuador Topography.png|thumb|left|250px|Ekvadoran topografine kart]]
 Ekvador om röunoiš [[Kolumbii|Kolumbijanke]] pohjoižes (röunan piduz — 590 km), [[Peru]]nke päivlaskmas da suves (1420 km). Ekvadoran päivlaskmaižed randad lainištab [[Tün' valdmeri]]. Randanpird om 2237 km. Üks' provincijoišpäi, [[Galapagosan sared]], sijadase 1000 km päivlaskmpolehe kontinentaližes Ekvadoraspäi, niil om meriröunoid [[Kostarik]]an [[Kokossared|Kokossaridenke]].
 
 Valdkundan kaikiš korktemb čokkoim om [[Čimboraso]]-vulkan, 6267 m ü.m.t. kortte. Pened joged jokstas [[Tün' valdmeri|Tünhe valdmerhe]] vai [[Amazonas]]ha. [[Andad]]-mäged oma veziröunaks jogiden keskes.
@@ -47,8 +47,8 @@ Sikš ku Ekvador sijadase ekvatoral, ka [[päiväine]] čirgahtab da laskese kai
 Londuseližed pävarad oma [[kivivoi]] da [[sel'd']]; erased toižed resursad: [[ekvatorialine mec|nepsad ekvatorialižed mecad]] (kattas territorijan nell' ühesandest), [[gidroenergii]].
 
 == Tobmuz ==
-[[Fail:Carondelet - Quito.JPG|thumb|right|250px|Ekvadoran prezidentan pert'kulu ({{lang-es|Palacio de Carondelet}}) [[Kito]]s.]]
-Ekvador om unitarine konstitucine [[prezidentine tazovaldkund|prezidentine]] tazovaldkund. Valdkundan pämez' om prezident ({{lang-es|Presidente de la República del Ecuador}}), hän-žo om ohjastusen pämeheks. Rahvaz valičeb händast nelläks vodeks, kahtenden strokun voimuz om olmas. Ekvadoran ministrišt nimitase oficialižikš Rahvahanikoiden sodan ministrištoks ({{lang-es|Gabinete de la Revolución Ciudadana}}). Prezident paneb ministrid radsijha. Vs 2017 semendkun 24. päiväspäi [[Moreno Lenin|Lenin Moreno]] radab prezidentan, edel sidä oli varaprezidentan. [[Korrea Rafael'|Rafael' Korrea]] om enzne prezident (2007−2017).
+[[Fail:Carondelet - Quito.JPG|thumb|right|250px|Ekvadoran prezidentan pert'kulu ({{lang-es|Palacio de Carondelet}}) [[Kito]]s]]
+Ekvador om unitarine konstitucine [[prezidentine tazovaldkund|prezidentine]] tazovaldkund. Valdkundan pämez' om prezident ({{lang-es|Presidente de la República del Ecuador}}), hän-žo om ohjastusen pämeheks. Rahvaz valičeb händast nelläks vodeks, kahtenden strokun voimuz om olmas. Ekvadoran ministrišt nimitase oficialižikš Rahvahanikoiden sodan ministrištoks ({{lang-es|Gabinete de la Revolución Ciudadana}}). Prezident paneb ministrid radsijha. Vspäi 2021 Ekvadoran prezident om [[Giljermo Lasso]]. Vs 2017 semendkun 24. päiväspäi [[Moreno Lenin|Lenin Moreno]] radoi prezidentan, edel sidä oli varaprezidentan. [[Korrea Rafael'|Rafael' Korrea]] om edeline prezident (2007−2017).
 
 Parlament om üks'kodine Nacionaline Assamblei (Suim, {{lang-es|Asamblea Nacional}}), mülütab 137 deputatad-ühtnijad. Kaik rahvaz valičeb heid-ki nelläks vodeks. Parlamentan ühtnijoiden järgenduseližed valičendad oliba vn 2017 19. päiväl uhokud, hö išttas kümnes komitetas.
 
