--- a/Lasso_Giljermo.mw
+++ b/Lasso_Giljermo.mw
@@ -2,9 +2,11 @@
 | изображение = Guillermo Lasso by Samurai Juan (cropped).jpg
 | описание изображения = Lasso vl 2017
 }}
-'''Giljermo Lasso''' ({{lang-es|Guillermo Alberto Santiago Lasso Mendoza}}; sünd. 16. kül'mku 1955, [[Guajakil']], [[Ekvador]]) om [[Ekvador]]an valitud prezident vn 2021 sulakul. Sai vägestust kahtendes turas 52,48 % satusenke (ezmäižes turas — 19,74 %), se oli hänen koumanz' valičemižkompanii prezidentan radnikusele. Linneb rata valdkundan nell'kümnendeks seičemendeks prezidentaks vn 2021 semendkun 24. päiväspäi.
+'''Giljermo Lasso''' ({{lang-es|Guillermo Alberto Santiago Lasso Mendoza}}; sünd. 16. kül'mku 1955, [[Guajakil']], [[Ekvador]]) om [[Ekvador]]an valitud prezident vn 2021 sulakul. Sai vägestust kahtendes turas 52,48 % satusenke (ezmäižes turas — 19,74 %), se oli hänen koumanz' valičemižkompanii prezidentan radnikushe näht (kahtendes kompanijas sai 49 % änid). Mez' radab valdkundan nell'kümnendeks seičemendeks prezidentaks vn 2021 semendkun 24. päiväspäi.
 
-Politikanmez' om privatižen Bankan de Guajakil' akcijoiden kaikiš järedamb valdoičii.
+Politikanmez' om privatižen Bankan de Guajakil' akcijoiden kaikiš järedamb valdoičii. Vll 1998−1999 Lasso radoi Ekvadoran valdkundmehen.
+
+Giljermo om naižiš vspäi 1981, Maria de Lurdes Al'sivar Krespo om hänen ak. Sündutihe i kazvatihe viž last naimiželos: koumed poigad i kaht tütärt.
 
 == Homaičendad ==
 <references/>
