--- a/Magnitogorsk.mw
+++ b/Magnitogorsk.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Magnitogorskan lidnanznam
  | Flag text = Magnitogorskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 416,521
- | Voz' = 2018
+ | Eläjiden lugu = 413,253
+ | Voz' = 2020
  | Pind = 392.35
  | Fail = Magnitogorsk - Правобережный район.jpg
  | Pämez' = Sergei Berdnikov<br />(reduku 2016—)
@@ -21,10 +21,10 @@ Ezmäižen eländpunktan aluz om pandud [[Venäman imperii|venämalaižil]] baš
 
 Nügüdläižen eländpunktan aluz om pandud vl 1929 stanican sijas samha [[raud|raudkivendod]] da sauvomha metallurgijan tegint. Sen voden 30. päiväl kezakud ezmäine jonuz tuli Magnitogorskai-stancijha, lugetas alusenpanendan oficialižeks dataks. Amerikaižed, germanižed i britanižed kompanijad toiba mašiništod da abutiba sauvomižele. Radnikžilo sai lidnan statusad nügüdläiženke nimenke vl 1931. Kombinatan tehmižed ratas 1930-nziš vozišpäi. [[Toine mail'man soda|Toižen mail'man sodan]] aigan 34 edheotandad oliba evakuiruidud lidnha Ukrainaspäi, Leningradaspäi i Moskvaspäi.
 
-Magnitogorsk šingotase [[raud]]an metallurgijan järedal kombinatal i turizmal. Toižed edheotandad oma metalližtegesiden i terazvanundan tegimed, cementantegim, sauvondedheotandad, libutimiden tegim.
+Magnitogorsk šingotase raudan [[metallurgii|metallurgijan]] järedal kombinatal i turizmal. Toižed edheotandad oma metalližtegesiden i terazvanundan tegimed, [[cement]]antegim, sauvondedheotandad, libutimiden tegim.
 
 == Geografijan andmused ==
-[[Fail:Районы Магнитогорска.png|thumb|left|250px|Magnitogorskan rajonad:<br>{{legend|yellow|Leninan rajon}} {{legend|orange|Ordžonikidzen rajon}} {{legend|fuchsia|Oigedrandaline rajon}}]]
+[[Fail:Районы Магнитогорска.png|thumb|left|250px|Magnitogorskan rajonad:<br/>{{legend|yellow|Leninan rajon}} {{legend|orange|Ordžonikidzen rajon}} {{legend|fuchsia|Oigedrandaline rajon}}]]
 Lidn sijadase [[Ural (jogi)|Ural-jogen]] üläjoksmusen molembil randoil, [[Uralmäged|Suviuralan]] päivnouzmaižil pautkil, Magnitnai-mägen pohjanno (lidnan päivnouzmas, {{lang-ba|Магнит-тау}}, vanh. ''Әтәс'' — ''Atač'' «kukoi», 616 m ü.m.t., saihe kivendoks mägen tobmad palad), 370 m ü.m.t. keskmäižel korktusel. Röunatab [[Baškortostan]]anke päivlaskmas. Tegimen uit-vezivaradim ({{lang-ru|Заводской пруд}} vai ''Магнитогорское водохранилище'', 33 km²) om saudud Ural-jogel. Se jagab lidnad poleti, hura rand om Azijas, oiged rand — Evropas. Matkad [[Čeläbinsk]]hasai om 249 kilometrad pohjoižpäivnouzmha orhal, 309 km avtotedme vai 420 km raudtedme. Lähembaižed lidnad oma [[Üläural'sk]] 53 km pohjoižhe orhal vai 62 km avtotel i [[Beloreck]] (Baškortostan) 71 km lodeheze orhal, 84 km avtotedme vai raudtedme.
 
 Magnitogorsk om lidnümbrikon üks'jäine eländpunkt. Lidn jagase koumeks rajonaks vspäi 1972, ned ei olgoi municipaližikš ühtnikoikš. [[Agapovkan rajon]] ümbärdab lidnad Čeläbinskan agjas.
@@ -40,6 +40,20 @@ Professionaližen opendusen valdkundaližed aluzkundad oma Magnitogorskan sauvon
 Tramvaid, maršruttaksid, avtobusad da taksid oma kundaližeks transportaks lidnas. Kaks' Magnitogorsk-raudtestancijad, passažiroiden i jüguiden täht. Ei ole rengazavtoted lidnas ümbri.
 
 Rahvahidenkeskeine civiline Magnitogorsk-lendimport (''MQF / МГС'', 193 tuh. passažiroid vl 2017) sijadase 14 km päivlaskmha lidnan röunaspäi. Lendimportan territorii mülüb lidnümbrikho, se om ümbärtud Baškortostanan territorijal. Tehtas reisid Moskvha, Sočihe, sezonreisid Turkanmaha (Antal'j).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Администрация Магнитогорска - panoramio.jpg|Lidnan administracijan sauvuz (2016)
+Church of the Ascension of Christ (Magnitogorsk) 12.jpg|Sündun Voznesenjan kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2010 nägu
+Соборная мечеть (Магнитогорск).jpg|Magnitogorskan pämečet' (islam), vn 2015 nägu
+Памятник Ленину комс.пл.jpg|Magnitogorskan metallurgižen kombinatan kontor vl 2003
+Цементный завод - panoramio - Pesotsky.jpg|Cementantegim vl 2008
+Альфа центр - panoramio.jpg|«Al'fa Centr»-bizneskeskuz vl 2010
+Магнитогорский технический университет - panoramio.jpg|Magnitogorskan valdkundaline tehnine universitet (2008)
+Views of Magnitogorsk-2021 - 38.jpeg|Magnitogorskan operan da baletan teatr (2021)
+Views of Magnitogorsk-2021 - 72.jpeg|Metallurg-aren (2021)
+CDR 0034 IMG 4988.jpg|Magnitogorsk-Passažirskii-päraudtestancijan sauvuz vl 2005, Metallurg-muštnik om ezimal
+</gallery>
 
 == Homaičendad ==
 <references />
