--- a/Kištim.mw
+++ b/Kištim.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Kištiman lidnanznam
  | Flag text = Kištiman flag
  | Valdkund = Venäma
- | Eläjiden lugu = 37,480
- | Voz' = 2017
+ | Eläjiden lugu = 36,243
+ | Voz' = 2020
  | Pind = 45.67
- | Fail = Озеро Сугомак (Вид с горы Сугомак).jpg
- | Pämez' = Lüdmila Šebolaeva<br />(2010—)
+ | Fail = Храм Рождества Христова с высоты птичьего полета в Кыштыме.webp
+ | Pämez' = Lüdmila Šebolaeva<br />(sulaku 2010—)
  | Telefonkod = +7-35151-xx-xxx
  | Avtokod = 74. 174
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -27,11 +27,20 @@ Lidn sijadase ümbrikon päivnouzmaiženno röunanno, ühtennimižen jogen purtk
 Kaks'toštkümne žilod mülüdas lidnümbrikho Kištiman ližaks. Lidnümbrikon pind — 763 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 38 942 ristitud, lidnümbrikon — 41 791 ristitud. Kaikiš suremb lidnan ristitišt oli 41..42 tuhad eläjid vll 1989−2005 (42 852 rist. vl 1989). Kaik 40 150 eläjad oli lidnümbrikos vl 2017.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 38 942 ristitud, lidnümbrikon — 41 791 ristitud. Kaikiš suremb lidnan ristitišt oli 41..42 tuhad eläjid vll 1989−2005 (42 852 rist. vl 1989). Kaik 37 480 eläjad oli lidnas i 40 150 eläjad kaikes lidnümbrikos vl 2017.
 
-[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] nell' jumalanpertid i [[islam]]an pämečet' oma avaitud lidnas.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Raštvoiden päjumalanpert' i nell' jumalanpertid<ref>[http://sobory.ru/geo/distr/1044 Kištiman lidnümbrikon pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref>, [[islam]]an pämečet' oma avaitud lidnas.
 
 Professionaližen opendusen aluzkundad oma Suviuralan valdkundaližen kolledžan (Čeläbinsk) Kištiman filial i [[Miass]]an medicinižen kolledžan Kištiman filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Церковь Рождества Христова в Кыштыме (действующая).jpg|Raštvoiden päjumalanpert', vn 2010 nägu
+Кыштым (мечеть и автостанция).jpg|Islaman pühäpert' i avtobusstancii päraudtestancijanno, vn 2018 nägu
+Истребитель МИГ-29 возле Радиозавода в Кыштыме.webp|Radiotegim i MiG-29-lendim vl 2021
+Дом культуры металлургов в Нижнем Кыштыме.webp|Metallurgoiden kul'turkeskuz (2021)
+Кыштым (здание вокзала).jpg|Kištim-päraudtestancijan sauvuz vl 2018
+</gallery>
 
 == Homaičendad ==
 <references />
