/* Linduihe sidodud vepsän muštatišed */ +

--- a/Lindud.mw
+++ b/Lindud.mw
@@ -29,6 +29,7 @@ Linduiden klassha mülüdas [[kur'g]]ed, [[joucen|joucned]], [[kajag]]ed, [[kana
 == Linduihe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Aigaline linduine nenaižen sel'gitab, a möhäine linduine völ suugaižed oigendeleb.''
+* ''Aigaližel linduižel n'ok om puhtaz''
 * ''Jogo lindule om ičeze peza kalliž.''
 * ''Kaikuččel linduižel ičeze pezaine.''
 * ''Kaikuččel lindul ičeze än'.''
