/* Solha sidodud vepsän muštatiž */ +

--- a/Sol.mw
+++ b/Sol.mw
@@ -12,8 +12,9 @@ Sol om tarbhaine ristitun da toižiden eläbiden olijoiden elonradmižen täht, 
 
 Mail'man tervhudenkaičendan organizacii rekomenduib röunatada natrijan kulutandad kahtel grammal päiväs täuz'kaznuzile, mugoine natrijan lugumär mülüb solan vidhe grammaha. Pidab muštta, miše natrii om toižiden söndtavaroiden palaks, i sol mülüb lihaproduktoihe, mineralvedhe da paštateshe, ka puhthan solan kulutand voib olda sekundarižeks.
 
-== Solha sidodud vepsän muštatiž ==
+== Solha sidodud vepsän muštatišed ==
 <blockquote>
+* ''Enččel solal ei jotanzoita.'' (mi oli, ka mäni lophu)
 * ''Solatomad särpta da ei mel'hišt čukoida.''
 </blockquote>
 
