/* Sobihe sidodud vepsän muštatišed i ozoitesed */ +

--- a/Sobad.mw
+++ b/Sobad.mw
@@ -96,6 +96,7 @@ Uniform om märitud büdžetorganizacijoiden radnikoiden da valdkundmehiden täh
 * ''Miččed radod, mugomad sobad-ki.''
 * ''Pen't reigud ed kohenda, sur' linneb — ka tacid.'' (pidab tehta aigaižel, ičeze aigal)
 * ''Sömäta joksed läbi pöudos, a alasti ei sa.''
+* ''Äipäiv sanui: minun täht soba hot' kulu da puhtaz. Stroičanpäiv sanui: a minun täht soba hot' pautnasine da uz'.''
 </blockquote>
 
 === Ozoitez ===
