--- a/Äipäiv.mw
+++ b/Äipäiv.mw
@@ -11,6 +11,11 @@ Mugažo kävutadas munid vändoiš. Ozutesikš, mehed voibišteldas mujutadud mu
 
 [[Čibud]] oma bobuštuseks norišton täht Äipäivän aigan. Pandas niid irdale vai tanhoile. Čibud oma sured, voib ištta niil 5..6 ristitule. Neiččed pajatadas čibuden hätkeližid pajoid.
 
+== Äipäivhä sidodud vepsän muštatiž ==
+<blockquote>
+* ''Äipäiv sanui: minun täht soba hot' kulu da puhtaz. Stroičanpäiv sanui: a minun täht soba hot' pautnasine da uz'.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
