--- a/Stroicanpäiv.mw
+++ b/Stroicanpäiv.mw
@@ -10,6 +10,11 @@ Pühähengen (Rahkoiden) päiv oigendase jäl'geližel päiväl, ezmärgel.
 
 [[Katoline jumalankodikund|Katoline]] i [[lüteranine jumalankodikund|lüteranine]] jumalankodikundad oigetas Vižkümnent päiväd, heiden Stroicanpäiv linneb nedališ, tuleban aigan pühäpäiväl, 57-ndel päiväl heiden-žo Äipäivän jäl'ghe, ka se oleskeleb aigemba mi ortodoksižil hristanuskojil päpaloin.
 
+== Stroicanpäivhä sidodud vepsän muštatiž ==
+<blockquote>
+* ''Äipäiv sanui: minun täht soba hot' kulu da puhtaz. Stroičanpäiv sanui: a minun täht soba hot' pautnasine da uz'.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
