--- a/Nedal'.mw
+++ b/Nedal'.mw
@@ -5,6 +5,11 @@
 
 Kalendarine nedal' märhapanese rahvahidenkeskeižel ISO 8601-standartal (2.2.8.-punkt) kuti aigan seičemepäiväine pord, zavodiše [[ezmärg]]aspäi.
 
+== Nedalihe sidodud vepsän muštatiž ==
+<blockquote>
+* ''Pit'kad oma nedaližed mänetada, pit'kad oma päiväižed varastada.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
