--- a/Vezi.mw
+++ b/Vezi.mw
@@ -27,6 +27,7 @@ Veden ninevuz om 0,9982 g/sm³, suladandlämuz om 0 C°, kehundtemperatur om lä
 * ''Ištujan kiven alle vezi ei jokse.''
 * ''Kadoi kuti kala vedhe.''
 * ''Kala vedeta ei elä.''
+* ''Konz vezi persken alle tuleb, siloi i ujumaha.''
 * ''Leib da vezi — saldatan söm.''
 * ''Märg ei varaida vet.''
 * ''Palanu lämoid ei varaida, a upnu — vet.''
