--- a/Alžir-lidnan_znam.mw
+++ b/Alžir-lidnan_znam.mw
@@ -1,7 +1,11 @@
 [[Fail:Algiers-COA.svg|right|250px]]
-'''Alžir-lidnan znam''' ({{lang-ar|ختم الجزائر العاصمة}}) om Alžir-valdkundan [[Alžir (lidn)|Alžir]]-pälidnan üks' oficialižiš simvolišpäi valdkundan ripmatomuden tedotusen jäl'ghe.
+'''Alžir-lidnan znam''' ({{lang-ar|ختم الجزائر العاصمة}}) om Alžir-valdkundan [[Alžir (lidn)|Alžir]]-pälidnan üks' oficialižiš simvolišpäi. Nügüdläine versii om vahvištadud valdkundan ripmatomuden tedotusen jäl'ghe.
 
-Lidnuz kuvadase rindhankatusen ülähäspäi, se om Alžiran [[kasbah]]an da kaiken vanhan lidnan simvol. Laiv simvolizuruib valdkundan laivišton sijadust da sen znamoičendad enččes. Kaks' [[lev]]ad oma ottud lidnan ''Bab Azzoun''-verajaspäi. Stilizuidud pol'ku tähthanke om [[islam]]-päreligijan znam.
+Pakuine lidnuz kuvadase rindhankatusen ülähäspäi, se om Alžiran [[kasbah]]an da kaiken vanhan lidnan simvol. Laiv simvolizuruib valdkundan laivišton sijadust da sen znamoičendad enččes. Kaks' hahkad [[lev]]ad oma ottud lidnan ''Bab Azzoun''-verajaspäi. Stilizuidud rusttad pol'ku i tähtaz oma [[islam]]-päreligijan znam.
+
+Kukruzan snap i piikezr kuvadasoiš somuzlaudan alahas. Kukuruz om valdkundan päine villänkul'tur i om ümbärdajan maižanduzrajonan simvolaks. Piikezr znamoičeb industrijad, Alžir-lidn om kaikiš suremb tegimištoline keskuz valdkundas.
+
+{{Commons|Category:Coats of Arms of Algiers}}
 
 {{stub}}
 [[Kategorii:Lidnanznamad]]
