--- a/Alžir-lidnan_znam.mw
+++ b/Alžir-lidnan_znam.mw
@@ -1,7 +1,7 @@
 [[Fail:Algiers-COA.svg|right|250px]]
-'''Alžir-lidnan znam''' ({{lang-ar|ختم الجزائر العاصمة}}) om Alžir-valdkundan [[Alžir (lidn)|Alžir]]-pälidnan üks' oficialižiš simvolišpäi. Nügüdläine versii om vahvištadud valdkundan ripmatomuden tedotusen jäl'ghe.
+'''Alžir-lidnan znam''' ({{lang-ar|ختم الجزائر العاصمة}}) om Alžir-valdkundan [[Alžir (lidn)|Alžir]]-pälidnan üks' oficialižiš simvolišpäi. Nügüdläine versii om vahvištadud valdkundan ripmatomuden tedotusen jäl'ghe kolonialižen versijan alusel.
 
-Pakuine lidnuz kuvadase rindhankatusen ülähäspäi, se om Alžiran [[kasbah]]an da kaiken vanhan lidnan simvol. Laiv simvolizuruib valdkundan laivišton sijadust da sen znamoičendad enččes. Kaks' hahkad [[lev]]ad oma ottud lidnan ''Bab Azzoun''-verajaspäi. Stilizuidud rusttad pol'ku i tähtaz oma [[islam]]-päreligijan znam.
+Pakuine lidnuz kuvadase rindhankatusen ülähäspäi, se om Alžiran [[kasbah]]an da kaiken vanhan lidnan simvol. Laiv simvolizuruib valdkundan laivišton sijadust da sen znamoičendad enččes. Kaks' hahkad [[lev]]ad oma ottud lidnan ''Bab Azzoun''-verajaspäi. Stilizuidud rusked pol'ku tähtanke sen südäimes om [[islam]]-päreligijan znam. Sinine i vihand zonad kuvastadas lidnan sijadust mererandal.
 
 Kukruzan snap i piikezr kuvadasoiš somuzlaudan alahas. Kukuruz om valdkundan päine villänkul'tur i om ümbärdajan maižanduzrajonan simvolaks. Piikezr znamoičeb industrijad, Alžir-lidn om kaikiš suremb tegimištoline keskuz valdkundas.
 
