--- a/.om.mw
+++ b/.om.mw
@@ -1,11 +1,13 @@
 [[Fail:DotOm domain logo.png|thumb|right|200px|.om-domenan logotip.]]
-'''.om''' om [[Oman]]an [[DNS|Internet-domen]]. Se om avaitud [[1996. voz'|1996]]-nden voden 11. päiväl sulakud.<ref>[http://iana.org/domains/root/db/om.html IANA — .om Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.om''' om [[Oman]]an [[DNS|Internet-domen]]. Se om avaitud [[1996. voz'|1996]]-nden voden 11. päiväl sulakud<ref>[http://iana.org/domains/root/db/om.html IANA — .om Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Komplimentarine domen om '''.عمان''' (.oman) vspäi 2010, se om [[araban kel'|arabankel'židen]] domennimiden täht.
+
+Edel 2014. vot registracii oli lasktud Omanan tobmuden organoile i valdkundaližile kompanijoile, sid' Omanan kaikile kompanijoile i personoile.
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://ooredoo.om/Business/Connect/DomainRegistration.aspx Domenan regustracijan üks' saitoišpäi (''ooredoo.om'').] {{ref-en}} {{ref-ar}}
+* [http://ooredoo.om/Business/Connect/DomainRegistration.aspx Domenan registracijan üks' koumes saitaspäi (''ooredoo.om'').] {{ref-en}} {{ref-ar}}
 * [http://www.tra.gov.om/om-registry Domenan registracijan polhe «Telecommunications Regulatory Authority» saital (TRA Oman, domenan ohjandai, ''tra.gov.om'').] {{ref-en}} {{ref-ar}}
 * [http://iana.org/domains/root/db/om.html IANA-informacii (''iana.org'').] {{ref-en}}
 
